Table users {
  id INTEGER [pk, increment]
  username VARCHAR(50) [not null]
  email VARCHAR(100) [not null]
  password VARCHAR(255) [not null]
  full_name VARCHAR(255) [not null]
  phone VARCHAR(255) [not null]
  verified BOOLEAN [default false]
  created_at DATETIME [default: `CURRENT_TIMESTAMP`]
}

Table participants {
  id INTEGER [pk, increment]
  user_id INTEGER [not null, ref: > users.id] // Foreign Key dari users
  name VARCHAR(255) [not null]
  unix TEXT [not null] // Kode unik peserta
  phone VARCHAR(15) [not null]
  email VARCHAR(100) [not null]
  created_at DATETIME [default: `CURRENT_TIMESTAMP`]
}

Table participants_additional_info {
  id INTEGER [pk, increment]
  participant_id INTEGER [not null, ref: > participants.id] // Foreign Key dari participants
  key TEXT [not null] // Informasi tambahan dinamis
  value TEXT
}

Table events {
  id INTEGER [pk, increment]
  user_id INTEGER [not null, ref: > users.id] // Foreign Key dari users
  title VARCHAR(255) [not null]
  unix TEXT [not null] // Kode unik event
  description TEXT
  date DATE [not null]
  price INTEGER [default: 0]
  capacity INTEGER [not null]
  location VARCHAR(255)
  created_at DATETIME [default: `CURRENT_TIMESTAMP`]
}

Table reservations {
  id INTEGER [pk, increment]
  user_id INTEGER [not null, ref: > users.id] // Foreign Key dari users
  participant_id INTEGER [not null, ref: > participants.id] // Foreign Key dari participants
  event_id INTEGER [not null, ref: > events.id] // Foreign Key dari events
  status VARCHAR(20) [not null]
  booking_code VARCHAR(50) [not null]
  created_at DATETIME [default: `CURRENT_TIMESTAMP`]
}

Table payments {
  id INTEGER [pk, increment]
  user_id INTEGER [not null, ref: > users.id] // Foreign Key dari users
  reservation_id INTEGER [not null, ref: > reservations.id] // Foreign Key dari reservations
  payment_date DATETIME [not null]
  amount DECIMAL(10,2) [not null]
  status VARCHAR(20) [not null]
  created_at DATETIME [default: `CURRENT_TIMESTAMP`]
}

Table sessions {
  id INTEGER [pk, increment]
  user_id INTEGER [not null, ref: > users.id] // Foreign Key dari users
  event_id INTEGER [not null, ref: > events.id] // Foreign Key dari events
  unix TEXT [not null] // Kode sesi unik
  name TEXT [not null] // Nama sesi
  description TEXT [not null] // Deskripsi sesi
  created_at DATETIME [default: `CURRENT_TIMESTAMP`]
}

Table validators {
  id INTEGER [pk, increment]
  user_id INTEGER [not null, ref: > users.id] // Foreign Key dari users
  name TEXT [not null] // Nama validator
}

Table scanned {
  id INTEGER [pk, increment]
  scanTime DATETIME [default: `CURRENT_TIMESTAMP`] // Waktu scan
  participant_id INTEGER [not null, ref: > participants.id] // Foreign Key dari participants
  validator_id INTEGER [not null, ref: > validators.id] // Foreign Key dari validators
  session_id INTEGER [not null, ref: > sessions.id] // Foreign Key dari sessions
}
